--- a/web/static/index.html
+++ b/web/static/index.html
@@ -7,6 +7,9 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
         <title>nibblrjr</title>
+        <link href="/css/normalize.min.css" rel="stylesheet" />
+        <link href="/css/blueprint.min.css" rel="stylesheet" />
+        <link href="/css/main.css" rel="stylesheet" />
     </head>
     <body>
         <script src="/root.js"></script>
