--- a/web/server/pasta/index.html
+++ b/web/server/pasta/index.html
@@ -31,7 +31,7 @@
     </head>
     <body>
         <iframe sandbox="allow-downloads alllow-forms allow-scripts"></iframe>
-        <script id="content" type="text/plain">--content--</script>
+        <script id="content" type="text/plain">----content----</script>
         <script>
             const content = atob(document.getElementById('content').textContent);
             const url = URL.createObjectURL(new Blob([content]));
