--- a/web/server/pasta/index.html
+++ b/web/server/pasta/index.html
@@ -30,7 +30,7 @@
         </style>
     </head>
     <body>
-        <iframe sandbox="allow-downloads alllow-forms allow-scripts"></iframe>
+        <iframe sandbox="allow-downloads allow-forms allow-scripts"></iframe>
         <script id="content" type="text/plain">----content----</script>
         <script>
             const content = atob(document.getElementById('content').textContent);
